syntax = "proto3";
package io.carbynestack.amphora.common.grpc;

import "common.proto";

option java_multiple_files = true;

message GrpcGetObjectListRequest {
  string filter = 1;
  int32 page_number = 2;
  int32 page_size = 3;
  string sort_property = 4;
  string sort_direction = 5;
}

message GrpcMetadata {
  string secret_id = 1;
  repeated GrpcTag tags = 2;
}

message GrpcMetadataPage {
  repeated GrpcMetadata content = 1;
  int32 number = 2;
  int32 size = 3;
  int64 total_elements = 4;
  int32 total_pages = 5;
}

message GrpcSecretShareRequest {
  string secret_id = 1;
  string request_id = 2;
}

message GrpcVerifiableSecretShare {
  GrpcMetadata metadata = 1;
  GrpcOutputDeliveryObject output_delivery_object = 2;
}


service SecretShareService{
  rpc GetObjectList(GrpcGetObjectListRequest) returns(GrpcMetadataPage);
  rpc GetSecretShare(GrpcSecretShareRequest) returns(GrpcVerifiableSecretShare);
  rpc DeleteSecretShare(GrpcSecretShareRequest) returns(GrpcEmpty);
}